@@ -21,6 +21,7 @@ import java.text.ParseException;
 import java.text.SimpleDateFormat;
 import java.util.Date;
 import java.util.Locale;
+import java.util.Map;
 import java.util.TimeZone;
 import java.util.concurrent.ConcurrentHashMap;
 
@@ -75,15 +76,13 @@ public final class FastHttpDateFormat {
     /**
      * Formatter cache.
      */
-    private static final ConcurrentHashMap<Long, String> formatCache =
-            new ConcurrentHashMap<>(CACHE_SIZE);
+    private static final Map<Long, String> formatCache = new ConcurrentHashMap<>(CACHE_SIZE);
 
 
     /**
      * Parser cache.
      */
-    private static final ConcurrentHashMap<String, Long> parseCache =
-            new ConcurrentHashMap<>(CACHE_SIZE);
+    private static final Map<String, Long> parseCache = new ConcurrentHashMap<>(CACHE_SIZE);
 
 
     // --------------------------------------------------------- Public Methods
@@ -91,6 +90,7 @@ public final class FastHttpDateFormat {
 
     /**
      * Get the current date in HTTP format.
+     * @return the HTTP date
      */
     public static final String getCurrentDate() {
 
@@ -110,11 +110,14 @@ public final class FastHttpDateFormat {
 
     /**
      * Get the HTTP format of the specified date.
+     * @param value The date
+     * @param threadLocalformat Local format to avoid synchronization
+     * @return the HTTP date
      */
     public static final String formatDate
         (long value, DateFormat threadLocalformat) {
 
-        Long longValue = new Long(value);
+        Long longValue = Long.valueOf(value);
         String cachedDate = formatCache.get(longValue);
         if (cachedDate != null) {
             return cachedDate;
@@ -137,6 +140,9 @@ public final class FastHttpDateFormat {
 
     /**
      * Try to parse the given date as a HTTP date.
+     * @param value The HTTP date
+     * @param threadLocalformats Local format to avoid synchronization
+     * @return the date as a long
      */
     public static final long parseDate(String value,
                                        DateFormat[] threadLocalformats) {
@@ -154,7 +160,7 @@ public final class FastHttpDateFormat {
             throw new IllegalArgumentException();
         }
         if (date == null) {
-            return (-1L);
+            return -1L;
         }
 
         return date.longValue();
@@ -177,7 +183,7 @@ public final class FastHttpDateFormat {
         if (date == null) {
             return null;
         }
-        return new Long(date.getTime());
+        return Long.valueOf(date.getTime());
     }
 
 
